[package]
name = "cw-distribution"
version = "0.2.5"
authors = ["Ben2x4 <Ben2x4@tutanota.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/DA0-DA0/cw-dao"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta" }
schemars = "0.8.8"
serde = { version = "1.0.132", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
cw-multi-test = {  version = "0.11" }
