[package]
name = "cw-governance-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.0.0-beta5" }
cw-governance-macros = { version = "0.1.0", path = "../cw-governance-macros"}
serde = { version = "1.0", default-features = false, features = ["derive"] }
schemars = "0.8"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta5" }
