[package]
name = "cw-govmod-single"
version = "0.1.0"
authors = ["Zeke Medley <zekemedley@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.5
"""

[dependencies]
cosmwasm-std = { version = "1.0.0-beta5" }
cosmwasm-storage = { version = "1.0.0-beta5" }
cw-storage-plus = "0.12"
cw-utils = "0.12"
cw2 = "0.12"
cw3 = "0.12"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cw-governance = { path = "../cw-governance", version = "0.1.0", features = ["library"] }
cw-governance-macros = { path = "../cw-governance-macros", version = "0.1.0" }
cw-governance-interface = { version = "0.1.0", path = "../cw-governance-interface" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta5" }
cw-multi-test = "0.12"
cw20-balance-voting = { path = "../cw20-balance-voting", version = "0.1.0" }
cw20-base = "0.12"
cw20 = "0.12"
rand = "0.8"