[package]
name = "cw-proposal-multiple"
version = "0.1.0"
authors = ["janitachalam <janitachalam@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = {  version = "0.13" }
cw2 = { version = "0.13" }
cw-storage-plus = { version = "0.13" }
cosmwasm-std = { version = "1.0.0-beta" }
schemars = "0.8.8"
serde = { version = "1.0.132", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }
voting = { path = "../../packages/voting" }
cw-core = { path = "../cw-core", version = "0.1.0", features = ["library"] }
cw-core-macros = { version = "0.1.0", path = "../../packages/cw-core-macros" }
cw-core-interface = { version = "0.1.0", path = "../../packages/cw-core-interface" } 
proposal-hooks = { version = "0.1.0", path = "../../packages/proposal-hooks" }
vote-hooks = { version = "0.1.0", path = "../../packages/vote-hooks" }
indexable-hooks = { version = "0.1.0", path = "../../packages/indexable-hooks" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = "0.13"
cw4-voting = { path = "../cw4-voting", version = "*" }
cw20-balance-voting = { path = "../../debug/cw20-balance-voting", version = "*" }
cw20-staked-balance-voting = { path = "../cw20-staked-balance-voting", version = "*" }
testing = { version = "*", path = "../../packages/testing" }
cw20-stake = { path= "../cw20-stake", version = "*" }
cw20-base = "0.13"
cw4 = "0.13"
cw4-group = "0.13"
rand = "0.8"
cw20 = "0.13"
