[package]
name = "cw-proposal-multiple"
version = "0.2.0"
authors = ["blue-note"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = {  version = "0.13" }
cw2 = { version = "0.13" }
cw-storage-plus = { version = "0.13" }
cosmwasm-std = { version = "1.0.0-beta" }
schemars = "0.8.8"
serde = { version = "1.0.132", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }
voting = { path = "../../packages/voting" }
cw-core = { path = "../cw-core", version = "*", features = ["library"] }
cw-core-macros = { version = "0.2.0", path = "../../packages/cw-core-macros" }
cw-core-interface = { version = "0.2.0", path = "../../packages/cw-core-interface" }
proposal-hooks = { version = "0.2.0", path = "../../packages/proposal-hooks" }
vote-hooks = { version = "0.2.0", path = "../../packages/vote-hooks" }
indexable-hooks = { version = "0.2.0", path = "../../packages/indexable-hooks" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-denom = { version = "*", path = "../../packages/cw-denom" }
cw-multi-test = "0.13"
cw-proposal-multiple = { path = "./", version = "*" }
cw-pre-propose-base-proposal-multiple = { path = "../cw-pre-propose-base-proposal-multiple", version = "*" }
cw4-voting = { path = "../cw4-voting", version = "*" }
cw20-balance-voting = { path = "../../debug/cw20-balance-voting", version = "*" }
cw20-staked-balance-voting = { path = "../cw20-staked-balance-voting", version = "*" }
cw-native-staked-balance-voting = { path = "../cw-native-staked-balance-voting", version = "*" }
cw20 = "0.13"
cw20-base = "0.13"
cw4 = "0.13"
cw4-group = "0.13"
cw20-stake = { path= "../cw20-stake", version = "*" }
cw721-base = "0.13"
cw721-stake = { path = "../cw721-stake", version = "*" }
testing = { version = "*", path = "../../packages/testing" }
rand = "0.8"
