[package]
name = "cw-proposal-single"
version = "0.2.0"
authors = ["ekez <ekez@withoutdoing.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0", features = ["ibc3"] }
cosmwasm-storage = { version = "1.0.0" }
cw-asset = "2.2.0"
cw-storage-plus = "0.13"
cw-utils = "0.13"
cw2 = "0.13"
cw20 = "0.13"
cw3 = "0.13"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cw-core = { path = "../cw-core", version = "*", features = ["library"] }
cw-core-macros = { path = "../../packages/cw-core-macros", version = "*" }
cw-core-interface = { version = "*", path = "../../packages/cw-core-interface" }
voting = { version = "*", path = "../../packages/voting" }
indexable-hooks = { version = "*", path = "../../packages/indexable-hooks" }
proposal-hooks = { version = "*", path = "../../packages/proposal-hooks" }
vote-hooks = { version = "*", path = "../../packages/vote-hooks" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = "0.13"
cw4-voting = { path = "../cw4-voting", version = "*" }
cw20-balance-voting = { path = "../../debug/cw20-balance-voting", version = "*" }
cw20-staked-balance-voting = { path = "../cw20-staked-balance-voting", version = "*" }
cw-native-staked-balance-voting = { path = "../cw-native-staked-balance-voting", version = "*" }
cw721-stake = { path = "../cw721-stake", version = "*" }
cw-pre-propose-base-proposal-single = { path = "../cw-pre-propose-base-proposal-single", version = "*" }
cw721-base = "0.13"
testing = { version = "*", path = "../../packages/testing" }
cw20-stake = { path= "../cw20-stake", version = "*" }
cw20-base = "0.13"
cw4 = "0.13"
cw4-group = "0.13"
