[package]
name = "cw-token-swap"
version = "0.1.0"
authors = ["Zeke Medley <zekemedley@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# For more explicit tests, `cargo test --features=backtraces`.
backtraces = ["cosmwasm-std/backtraces"]
# Use library feature to disable all instantiate/execute/query exports.
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.13"
cw-utils = "0.13"
cw2 = "0.13"
cw20 = "0.13"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = "0.13"
cw20-base = "0.13"