[package]
name = "cw-vesting"
version = "0.1.0"
authors = ["Ben <ben2x4@tutanota.com>, janitachalam <janitachalam@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "0.13"
cw20 = "0.13"
cosmwasm-std = { version = "1.0.0"}
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.13"
schemars = "0.8.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = {  version = "0.13.4" }
cw20-base = {  version = "0.13.4", features = ["library"] }
