[package]
name = "cw20-stakeable"
version = "0.1.0"
authors = ["Ben2x4 <Ben2x4@tutanota.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/DA0-DA0/cw-dao/contracts/cw20-stakeable"
description = "CW20 token that can be staked and staked balance can be queried at any height"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta2" }
cosmwasm-storage = { version = "1.0.0-beta2" }
cw-storage-plus = "0.10.2"
cw-controllers = "0.10.2"
cw20 = { version = "0.10.2" }
cw0 = { version = "0.10.2" }
cw20-base = {  version = "0.10.2", features = ["library"] }
cw2 = "0.10.2"
schemars = "0.8.6"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta2" }
