[package]
name = "cw20-staking"
version = "0.1.0"
authors = ["Ben2x4 <Ben2x4@tutanota.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/DA0-DA0/cw-dao"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta" }
cosmwasm-storage = { version = "1.0.0-beta" }
cw-storage-plus = "0.10"
cw-controllers = "0.10.0"
cw20 = { version = "0.10.0" }
cw0 = { version = "0.10.0" }
cw20-base = {  version = "0.10.0", features = ["library"] }
cw2 = "0.10"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
