[package]
name = "cw3-dao"
version = "0.1.0"
authors = ["Jake Hartnell <jake@stargaze.zone>", "Ben2x4 <Ben2x4@tutanota.com>", "Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implements a cw20 token governed DAO with multiple voting patterns."
license = "Apache-2.0"
repository = "https://github.com/JakeHartnell/cw-dao"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = {  version = "0.10.3" }
cw2 = { version = "0.10.3" }
cw3 = { version = "0.10.3" }
cw20 ="0.10.3"
cw20-base = {  version = "0.10.3", features = ["library"] }
cw20-gov = { path = "../cw20-gov", version = "0.1.0" }
cw-storage-plus = {  version = "0.10.3" }
cosmwasm-std = { version = "1.0.0-beta2" }
schemars = "0.8.6"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta2" }
cw-multi-test = {  version = "0.10.3" }
