[package]
name = "cw3-dao"
version = "0.2.5"
authors = ["Jake Hartnell <jake@stargaze.zone>", "Ben2x4 <Ben2x4@tutanota.com>", "Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implements a cw20 token governed DAO with multiple voting patterns."
license = "Apache-2.0"
repository = "https://github.com/JakeHartnell/cw-dao"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = {  version = "0.11" }
cw2 = { version = "0.11" }
cw3 = { version = "0.11" }
cw20 = "0.11"
cw20-base = {  version = "0.11", features = ["library"] }
stake-cw20-gov = { path = "../stake-cw20-gov" }
cw-storage-plus = {  version = "0.11" }
cosmwasm-std = { version = "1.0.0-beta" }
schemars = "0.8.8"
serde = { version = "1.0.132", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
cw-multi-test = {  version = "0.11" }
