[package]
name = "cw721-non-transferable"
version = "0.13.1"
authors = [
  "CypherApe <cypherape@protonmail.com>",
]
edition = "2018"
description = "Example extending CW721 NFT to store metadata on chain"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-nfts"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw721 = { version = "0.13.2" }
cw721-base = { version = "0.13.2" }
cosmwasm-std = { version = "1.0.0-beta8" }
schemars = "0.8"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta8" }
